<resources>
    <string name="app_name">ToDoApp</string>
    <string name="folder">Folder</string>
    <string name="all">All</string>
    <string name="notes">Notes</string>
    <string name="hint_title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete_success">Successfully Deleted </string>
    <string name="saved_success">Successfully Added</string>
    <string name="update_success">Successfully Updated</string>
    <string name="fill_out_all_fields">Please fill out all fields</string>
    <string name="folder_name">Folder Name</string>
    <string name="add_folder">Add Folder</string>
    <string name="moved_success">Successfully Moved</string>
    <string name="fill_folder_name">Please insert folder name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>