<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            style="@style/TitleNormalStyle"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="10dp"
            android:text="@string/add_folder"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/folderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:maxLength="15"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/roboto"
            android:hint="@string/folder_name"
            android:inputType="text"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                style="@style/ButtonStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="Cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_btn"
                style="@style/ButtonStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:backgroundTint="#24a0ed"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>